Localization and UI improvements

--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ResultsActivity">
+    <!--TODO: Migrate it to CoordinatorLayout-->
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/results_tb"
